convert commands to send and wait, so exceptions will bubble up ... added config/application.properties to have all actuator endpoints available when running in development

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ endpoints.enabled=false
 endpoints.health.enabled=true
 
 # How often to report metrics, in milliseconds
-reporting.timer=5000
+reporting.timer=10000
 reporting.endpoint=log:Metrics
+
+todo.create.timeout=500
+todo.complete.timeout=500
